Trying to fix header on small screen

--- a/css/queries.css
+++ b/css/queries.css
@@ -297,7 +297,7 @@
     }
 
     .hero .hero-content img {
-        width: 50%; /*65%*/
+        width: 30%; /*65%*/
     }
 
     .hero .btn {
